@startuml "company entity design"
    entity companies as "Company" {
        id: UUID <<pk>>
        brand_name: varchar(255)
        legal_name: varchar(255)
        owner_id: UUID <<fk>>
        is_enabled: boolean
        operates_in: UUID <<fk>>
        created_on: Timestamp DEFAULT now()
        updated_on: Timestamp DEFAULT now()
    }

    entity company_members as "CompanyMember" {
        id: UUID <<pk>>
        first_name: varchar(100)
        last_name: varchar(100)
        email: varchar(100)
        msisdn: varchar(10)
        has_mfa_enabled: boolean
        is_active: boolean
        created_on: Timestamp DEFAULT now()
        updated_on: Timestamp DEFAULT now()
    }

    entity company_member_allocations as "CompanyMemberAllocation" {
        id: UUID <<pk>>
        company_member_id: UUID <<fk>>
        created_on: Timestamp DEFAULT now()
        updated_on: Timestamp DEFAULT now()
    }

    entity company_member_allocations as "CompanyMemberAllocation" {
        id: UUID <<pk>>
        company_member_id: UUID <<fk>>
        created_on: Timestamp DEFAULT now()
        updated_on: Timestamp DEFAULT now()
    }

    entity company_geolocation_areas as "CompanyGeolocationArea" {
        id: UUID <<pk>>
        country_id: UUID <<fk>>
        company_id: UUID <<fk>>
        label: VARCHAR(255) NOT NULL
        code: VARCHAR(10) NOT NULL <<uk>>
        description: TEXT NULL
        is_active: boolean
        created_on: Timestamp DEFAULT now()
        updated_on: Timestamp DEFAULT now()
    }

    entity company_geolocation_area_polygons as "CompanyGeolocationAreaPolygons" {
        id: UUID <<pk>>
        area_id: UUID <<fk>>
        idx: int NOT NULL
        latitude: VARCHAR(10) NOT NULL
        longitude: VARCHAR(10) NOT NULL
        created_on: Timestamp DEFAULT now()
        updated_on: Timestamp DEFAULT now()
    }

    entity company_member_assigned_areas as "CompanyMemberAssignedAreas" {
        id: UUID <<pk>>
        company_member_id: UUID <<fk>>
        area_id: UUID <<fk>>
        is_active: boolean DEFAULT true
        created_on: Timestamp DEFAULT now()
        updated_on: Timestamp DEFAULT now()
    }

    company_geolocation_areas ||--o{ company_geolocation_area_polygons : "company_geolocation_area_polygons"
    companies ||--o{ company_members : "company_members"
    company_members ||--o{ company_member_assigned_areas
@enduml